--- a/css/main.css
+++ b/css/main.css
@@ -57,6 +57,8 @@ body, html {
     cursor: pointer;
     width: 30px;
     height: 22px;
+    position: relative;
+    left: -10px;
 }
 
     .menu-toggle span {
@@ -390,6 +392,7 @@ body, html {
     background: #023e58;
     color: white;
 }
+
 
 
 
